--- a/week4_part2.Rmd
+++ b/week4_part2.Rmd
@@ -12,8 +12,29 @@ knitr::opts_chunk$set(echo = TRUE,tidy.opts=list(width.cutoff=80), tidy=TRUE)
 
 # Part 2: Basic Inferential Data Analysis Instructions
 
+## Instructions
+Now in the second portion of the project, we're going to analyze the ToothGrowth data in the R datasets package.
 
+1. Load the ToothGrowth data and perform some basic exploratory data analyses
+2. Provide a basic summary of the data.
+3. Use confidence intervals and/or hypothesis tests to compare tooth growth by supp and dose. (Only use the techniques from class, even if there's other approaches worth considering)
+4. State your conclusions and the assumptions needed for your conclusions.
+
+## 1. Loading dataset and exploratory analysis
 ```{r}
+library(ggplot2)
 data(ToothGrowth)
+head(ToothGrowth)
 ```
+
+
+```{r, echo=FALSE}
+data = ToothGrowth
+ggplot(data = data, aes(x = supp, y = len, color = factor(dose)) ) + geom_boxplot() + xlab("Supplement type") + ylab("Length") + scale_color_discrete(name = "Dose")
+```
+
+## 2. Data summary
+
+
+
 
